# adventofcode

./: .gitignore  Cargo.toml  README.md
adventofcode2020rs/: Cargo.toml
adventofcode2020rs/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
adventofcode2021hs/: CHANGELOG.md  adventofcode2021hs.cabal
adventofcode2021hs/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day21b.hs  Day22.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  Utils.hs  VectorMath.hs
adventofcode2022rs/: Cargo.toml
inputs/: day2.txt  day6.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
