cabal-version:      2.4
name:               adventofcode2021hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ritik Mishra
maintainer:         ritik.mishra314@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable adventofcode2021hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Day1
                      Day2
                      Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
